style.css
body {
    background-color: bisque;
    display:flex;
    flex-direction: column;
    margin: 0;
    padding: 0;

}


#links {
    font-family: 'Merriweather', serif;
    margin-top: 50px;
    color: white;
    display: flex;
    justify-content: flex-end;
    gap: 10px;
    margin-right: 200px;

}

#logo {
    position: relative;
    padding-left: 20px;
    margin-top: 0;
    margin-bottom: 0;
    display: flex;
    height: 250px;
    width: 100px;

}

h2 {

    display: flex;
    justify-content: center;
}

.container {
    background-color: white;
    display: flex;
    justify-content: center;
    gap: 40px;
}

.description {
    display: flex;
    gap: 15px;
}

#mainphoto{
    align-self: flex-start;
    margin-top: 0px;
    display: flex;
    width: 500px;
    height: 500px;
    margin-right: 500px;
}

.photo {

    margin-top: 30px;
    display: flex;
    width: 350px;
    height: 350px;
    flex-direction: column;
    border-style: dotted;
    border-color: bisque;
    border-radius: 15px;
    margin-bottom: 200px;

}

#calltoaction {
    margin-top: 60px;
    display: flex;
    justify-content: center;

}

#main {
    margin-top: 0px;
    display: flex;
    justify-content: Center;
    gap: 100px;
    width: 2300px;
}

#intro {
    margin-bottom: 50px;
    width: 300px;
    display: flex;
    justify-content: center;
    flex-direction: column;


}


#testimonial {
    font-family: "Lucida Console", "Courier New", monospace;
    height: 400px;
    font-style: italic;
    font-size: 30px;
    display: flex;
    justify-content: center;
    background-color: whitesmoke;
}

#mailer {
    gap: 10px;
    width: 1000px;
    height: 150px;
    justify-content: center;
    background-color: #fcde6f;
    border: solid #fcde6f;
    border-radius: 15px;
}

#quote {
    display: flex;
    justify-content: center;
    width: 700px;
}

#customer {
    display: flex;
    justify-content: center;
    align-self: flex-end;
}

#title {
    margin-top: 40px;
    margin-bottom: 0px;
    margin-left: 50px;
    font-family: 'Barlow Condensed', sans-serif;
    color: white;
    font-size: 25px;
    font-weight: bold;
    display: flex;
    justify-content: space-between;
}

#subtext {
    margin-top: 0px;
    margin-left: 50px;
    display: flex;
    font-family: 'Barlow Condensed', sans-serif;
    color: white;
    gap: 50px;
}

#footer {
    color: white;
    display: flex;
    font-family: 'Barlow Condensed', sans-serif;
    justify-content: center;
}

#end {
    justify-content: center;
    background-color: white;
    height: 300px;

}

#heading {
    font-family: 'Playfair Display', serif;
    font-size: 40px;
    font-weight: 300;
    height: 80px;
    align-items: flex-end;
    margin-bottom: 0;
    background-color: white;
    display: flex;
    justify-content: center;
}

#signup {
    margin-left: 100px;
    display: inline-block;
    padding: 10px 20px;
    background-color: #fcde6f;
    color: white;
    text-align: center;
    text-decoration: none;
    border: 3px solid white;
    border-radius: 15px;
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
}

h1 {
    font-size: 50px;
    font-family: 'Merriweather', serif;
    font-weight: 900;
}
p {
    font-family: 'Merriweather', serif;
    font-weight: 300;
}

button {

    margin-right: 150px;
    display: inline-block;
    padding: 10px 20px;
    background-color: #fcde6f;
    color: white;
    text-align: center;
    text-decoration: none;
    border: 3px solid white;
    border-radius: 15px;
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
}

